Fix notification z-index

--- a/src/web/components/Notification.scss
+++ b/src/web/components/Notification.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  z-index: 1400;
+  z-index: $nav-z - 1;
   pointer-events: none;
 
   @media (min-width: 768px) {
